run.sh now has visualvm options